# faemiyah-demoscene_2023-08_4k-intro_tomograph

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README  README.md  compile-synth-test.sh  compile.sh  defaults.cmake  release.sh
rel/: quad.frag.glsl  tomograph_freebsd-amd64  tomograph_freebsd-ia32  tomograph_linux-ia32_compo_1080p_fullscreen  tomograph_linux-ia32_compo_1080p_windowed  tomograph_linux-ia32_compo_720p_fullscreen  tomograph_linux-ia32_compo_720p_windowed
src/: dnload.h  header.glsl  header.glsl.hpp  intro.cpp  post.frag.glsl  post.frag.glsl.hpp  quad.frag.glsl  quad.frag.glsl.hpp  synth-test.cpp  synth.asm  synth.h
